--- a/project/contact.html
+++ b/project/contact.html
@@ -1,8 +1,8 @@
 
 <html lang="en">
   <head>
-  <!--<meta charset="utf-8">-->
-  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+ <meta charset="utf-8">
+ <!--  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">-->
   <title>Кириллова Ирина</title>
   <link rel="stylesheet" href="sitefull.css">
   <!--  <link href='font-awesome.css' rel='stylesheet' type='text/css'>-->
