--- a/project/contact.html
+++ b/project/contact.html
@@ -1,7 +1,7 @@
 
 <html lang="en">
   <head>
- <meta charset="utf-8">
+ <meta charset="utf-8" name="Contact">
  <!--  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">-->
   <title>Кириллова Ирина</title>
   <link rel="stylesheet" href="sitefull.css">
