--- a/project/flowers.html
+++ b/project/flowers.html
@@ -1,6 +1,6 @@
 <htm lang="en">
   <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" name="Flowers">
   <title>Кириллова Ирина</title>
   <link rel="stylesheet" href="sitefull.css">
   <!--  <link href='font-awesome.css' rel='stylesheet' type='text/css'>-->
