--- a/project/index.html
+++ b/project/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
   <head>
-  <meta charset="utf-8" >
+  <meta charset="utf-8" name="viewport" >
   <title>Кириллова Ирина</title>
   <link rel="stylesheet" href="sitefull.css">
   <!--  <link href='font-awesome.css' rel='stylesheet' type='text/css'>-->
