--- a/project/register.html
+++ b/project/register.html
@@ -1,7 +1,7 @@
 
 <html lang="en">
   <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" name="Register">
   <title>Кириллова Ирина</title>
   <link rel="stylesheet" href="sitefull.css">
   <!--  <link href='font-awesome.css' rel='stylesheet' type='text/css'>-->
