--- a/project/specials_gifts.html
+++ b/project/specials_gifts.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
   <!--<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">-->
-  <meta charset="utf-8">
+  <meta charset="utf-8" name="Special gifts">
   <title>Кириллова Ирина</title>
   <link rel="stylesheet" href="sitefull.css">
   <!--  <link href='font-awesome.css' rel='stylesheet' type='text/css'>-->
