--- a/project/about_us.html
+++ b/project/about_us.html
@@ -1,6 +1,6 @@
 <html lang="en">
   <head>
-  <meta charset="utf-8" name="viewport"> 
+  <meta charset="utf-8" name="About us"> 
   <title>Кириллова Ирина</title>
   <link rel="stylesheet" href="sitefull.css">
   <!--  <link href='font-awesome.css' rel='stylesheet' type='text/css'>-->
