--- a/project/specials_gifts.html
+++ b/project/specials_gifts.html
@@ -49,7 +49,7 @@
      <img class="prod_img" src="pic/prod1.gif" alt="Photo1">
  
      <div class="prod_det_box"> <span class="special_icon"><img src="pic/special_icon.gif" alt="special_icon" /></span>
-       <div class="prod_title_middle">Product name</div>
+       <div class="prod_title_middle">Product name 1</div>
         <p class="prod_text_middle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
          <a href="#" class="more">- more details -</a>
        </div>
@@ -58,7 +58,7 @@
    <div class="prod">
      <img class="prod_img" src="pic/prod2.gif" alt="Photo2">
      <div class="prod_det_box"> <span class="special_icon"><img src="pic/special_icon.gif" alt="special_icon" /></span>
-       <div class="prod_title_middle">Product name</div>
+       <div class="prod_title_middle">Product name 2</div>
          <p class="prod_text_middle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
            <a href="#" class="more">- more details -</a>
        </div>
@@ -68,7 +68,7 @@
    <div class="prod">
      <img class="prod_img" src="pic/prod2.gif" alt="Photo2">
      <div class="prod_det_box"> <span class="special_icon"><img src="pic/special_icon.gif" alt="special_icon" /></span>
-       <div class="prod_title_middle">Product name</div>
+       <div class="prod_title_middle">Product name 3</div>
         <p class="prod_text_middle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
          <a href="#" class="more">- more details -</a>
        </div>
@@ -78,7 +78,7 @@
    <div class="prod">
      <img class="prod_img" src="pic/prod2.gif" alt="Photo3">
      <div class="prod_det_box"> <span class="special_icon"><img src="pic/special_icon.gif" alt="special_icon" /></span>
-       <div class="prod_title_middle">Product name</div>
+       <div class="prod_title_middle">Product name 4</div>
         <p class="prod_text_middle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
          <a href="#" class="more">- more details -</a>
        </div> 
@@ -87,7 +87,7 @@
    <div class="prod">
      <img class="prod_img" src="pic/prod2.gif" alt="Photo3">
      <div class="prod_det_box"> <span class="special_icon"><img src="pic/special_icon.gif" alt="special_icon" /></span>
-       <div class="prod_title_middle">Product name</div>
+       <div class="prod_title_middle">Product name 5</div>
         <p class="prod_text_middle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
          <a href="#" class="more">- more details -</a>
        </div> 
@@ -96,7 +96,7 @@
    <div class="prod">
      <img class="prod_img" src="pic/prod2.gif" alt="Photo3">
      <div class="prod_det_box"> <span class="special_icon"><img src="pic/special_icon.gif" alt="special_icon" /></span>
-       <div class="prod_title_middle">Product name</div>
+       <div class="prod_title_middle">Product name 6</div>
         <p class="prod_text_middle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
          <a href="#" class="more">- more details -</a>
        </div> 
@@ -105,7 +105,7 @@
     <div class="prod">
      <img class="prod_img" src="pic/prod2.gif" alt="Photo3">
      <div class="prod_det_box"> <span class="special_icon"><img src="pic/special_icon.gif" alt="special_icon" /></span>
-       <div class="prod_title_middle">Product name</div>
+       <div class="prod_title_middle">Product name 7</div>
         <p class="prod_text_middle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
          <a href="#" class="more">- more details -</a>
        </div> 
@@ -114,7 +114,7 @@
    <div class="prod">
      <img class="prod_img" src="pic/prod2.gif" alt="Photo3">
      <div class="prod_det_box"> <span class="special_icon"><img src="pic/special_icon.gif" alt="special_icon" /></span>
-       <div class="prod_title_middle">Product name</div>
+       <div class="prod_title_middle">Product name 8</div>
         <p class="prod_text_middle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
          <a href="#" class="more">- more details -</a>
        </div> 
@@ -123,7 +123,7 @@
     <div class="prod">
      <img class="prod_img" src="pic/prod2.gif" alt="Photo3">
      <div class="prod_det_box"> <span class="special_icon"><img src="pic/special_icon.gif" alt="special_icon" /></span>
-       <div class="prod_title_middle">Product name</div>
+       <div class="prod_title_middle">Product name 9</div>
         <p class="prod_text_middle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
          <a href="#" class="more">- more details -</a>
        </div> 
@@ -132,7 +132,7 @@
    <div class="prod">
      <img class="prod_img" src="pic/prod2.gif" alt="Photo3">
      <div class="prod_det_box"> <span class="special_icon"><img src="pic/special_icon.gif" alt="special_icon" /></span>
-       <div class="prod_title_middle">Product name</div>
+       <div class="prod_title_middle">Product name 10</div>
         <p class="prod_text_middle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
          <a href="#" class="more">- more details -</a>
        </div> 
@@ -141,7 +141,7 @@
    <div class="prod">
      <img class="prod_img" src="pic/prod2.gif" alt="Photo3">
      <div class="prod_det_box"> <span class="special_icon"><img src="pic/special_icon.gif" alt="special_icon" /></span>
-       <div class="prod_title_middle">Product name</div>
+       <div class="prod_title_middle">Product name 11</div>
         <p class="prod_text_middle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
          <a href="#" class="more">- more details -</a>
        </div> 
@@ -150,7 +150,7 @@
    <div class="prod">
      <img class="prod_img" src="pic/prod2.gif" alt="Photo3">
      <div class="prod_det_box"> <span class="special_icon"><img src="pic/special_icon.gif" alt="special_icon" /></span>
-       <div class="prod_title_middle">Product name</div>
+       <div class="prod_title_middle">Product name 12</div>
         <p class="prod_text_middle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
          <a href="#" class="more">- more details -</a>
        </div> 
@@ -159,7 +159,7 @@
    <div class="prod">
      <img class="prod_img" src="pic/prod2.gif" alt="Photo3">
      <div class="prod_det_box"> <span class="special_icon"><img src="pic/special_icon.gif" alt="special_icon" /></span>
-       <div class="prod_title_middle">Product name</div>
+       <div class="prod_title_middle">Product name 13</div>
         <p class="prod_text_middle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
          <a href="#" class="more">- more details -</a>
        </div> 
@@ -168,7 +168,7 @@
     <div class="prod">
      <img class="prod_img" src="pic/prod2.gif" alt="Photo3">
      <div class="prod_det_box"> <span class="special_icon"><img src="pic/special_icon.gif" alt="special_icon" /></span>
-       <div class="prod_title_middle">Product name</div>
+       <div class="prod_title_middle">Product name 14</div>
         <p class="prod_text_middle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
          <a href="#" class="more">- more details -</a>
        </div> 
@@ -177,7 +177,7 @@
     <div class="prod">
      <img class="prod_img" src="pic/prod2.gif" alt="Photo3">
      <div class="prod_det_box"> <span class="special_icon"><img src="pic/special_icon.gif" alt="special_icon" /></span>
-       <div class="prod_title_middle">Product name</div>
+       <div class="prod_title_middle">Product name 15</div>
         <p class="prod_text_middle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
          <a href="#" class="more">- more details -</a>
        </div> 
