--- a/project/flowers.html
+++ b/project/flowers.html
@@ -152,6 +152,9 @@
 
       </div>
    <section class="pager">
+    <div class="pager__info">
+    Show 1 to 10 of 150 rows
+    </div>
       <div class="pager__controls">
             <a class="pager__prev">
                 Previous
