--- a/project/flowers.html
+++ b/project/flowers.html
@@ -283,7 +283,7 @@
 
 <script defer type="text/javascript" src="project.js"></script>
 
-<script defer type="text/javascript" src="scrolprod.js"></script>
+<script defer type="text/javascript" src="scrolflowers.js"></script>
 
   
 </body>
