--- a/project/prices.html
+++ b/project/prices.html
@@ -91,19 +91,19 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
     <tr>
       <td>
          <div class="new_prod_part"> <a href="#">product name 1</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
       <td>
         <div class="new_prod_part"> <a href="#">product name 2</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
       <td>
             <div class="new_prod_part"> <a href="#">product name 3</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
@@ -111,19 +111,19 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
     <tr>
       <td>
         <div class="new_prod_part"> <a href="#">product name 4</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
       <td>
         <div class="new_prod_part"> <a href="#">product name 5</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
       <td>
          <div class="new_prod_part"> <a href="#">product name 6</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
@@ -131,19 +131,19 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
     <tr>
       <td>
         <div class="new_prod_part"> <a href="#">product name 7</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
       <td>
         <div class="new_prod_part"> <a href="#">product name 8</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
       <td>
          <div class="new_prod_part"> <a href="#">product name 9</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
@@ -151,19 +151,19 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
     <tr>
       <td>
          <div class="new_prod_part"> <a href="#">product name 10</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
       <td>
         <div class="new_prod_part"> <a href="#">product name 11</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
       <td>
         <div class="new_prod_part"> <a href="#">product name 12</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
@@ -171,19 +171,19 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
     <tr>
       <td>
         <div class="new_prod_part"> <a href="#">product name 13</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
       <td>
         <div class="new_prod_part"> <a href="#">product name 14</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
       <td>
         <div class="new_prod_part"> <a href="#">product name 15</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
@@ -191,19 +191,19 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
     <tr>
       <td>
         <div class="new_prod_part"> <a href="#">product name 16</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
       <td>
         <div class="new_prod_part"> <a href="#">product name 17</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
       <td>
         <div class="new_prod_part"> <a href="#">product name 18</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
@@ -211,19 +211,19 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
     <tr>
       <td>
         <div class="new_prod_part"> <a href="#">product name 19</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
       <td>
         <div class="new_prod_part"> <a href="#">product name 20</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
       <td>
         <div class="new_prod_part"> <a href="#">product name 21</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
@@ -231,19 +231,19 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
     <tr>
       <td>
         <div class="new_prod_part"> <a href="#">product name 22</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
       <td>
         <div class="new_prod_part"> <a href="#">product name 23</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
       <td>
         <div class="new_prod_part"> <a href="#">product name 24</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
@@ -251,7 +251,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
     <tr>
       <td>
         <div class="new_prod_part"> <a href="#">product name 25</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> 
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" data-type="slide" alt="" class="product" border="0" /></a> 
           </div>
          </div>
       </td>
