--- a/project/index.html
+++ b/project/index.html
@@ -149,10 +149,12 @@
   <div class="footer_left">
     <img src="pic/footer_logo.gif" alt="Logo">
     <br/>
-    <a href="#" alt="Logo" border="0" />Текст</a>
+    <a href="curriculum_vitae.html" target="_blank" alt="Logo" border="0" />Текст</a>
   </div>
+  
   <div class="menu-footer"> <a href="index.html">home</a> <a href="about_us.html">about us</a> <a href="flowers.html">flowers</a> <a href="prices.html">prices</a> <a href="contact.html">contact us</a>
-    <br>
+    <br/>
+    
     <div class="footer-social">
      <a target="_blank" class="facebook" href="http://www.facebook.com"><span class="fa fa-facebook"></span></a>
      <a  href="http://youtube.com.ua/" target="_blank" class="youtube" href="#"><span class="fa fa-youtube" ></span></a>
