--- a/project/about_us.html
+++ b/project/about_us.html
@@ -123,12 +123,12 @@
 <div class="footer">
 <div class="footer_left">
       <img src="pic/footer_logo.gif" alt="Logo">
-<br/>
-      <a href="#" alt="Logo" border="0" />Текст</a>
+    <br/>
+    <a href="curriculum_vitae.html" target="_blank" alt="Logo" border="0" />Текст</a>
   </div>
-
+  
   <div class="menu-footer"> <a href="index.html">home</a> <a href="about_us.html">about us</a> <a href="flowers.html">flowers</a> <a href="prices.html">prices</a> <a href="contact.html">contact us</a>
-    <br>
+    <br/>
      
      
   <div class="footer-social">
