--- a/project/specials_gifts.html
+++ b/project/specials_gifts.html
@@ -295,7 +295,7 @@
 <div class="footer_left">
       <img src="pic/footer_logo.gif" alt="Logo">
     <br/>
-    <a href="curriculum_vitae.html" target="_blank" alt="Logo" border="0" />Текст</a>
+     <a href="curriculum_vitae.html" target="_blank" alt="Logo" border="0" />Iryna Kyrylova</a>
   </div>
   
   <div class="menu-footer"> <a href="index.html">home</a> <a href="about_us.html">about us</a> <a href="flowers.html">flowers</a> <a href="prices.html">prices</a> <a href="contact.html">contact us</a>
